--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
     </nav>
 
+    <!-- Task 3 -->
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -45,6 +46,9 @@
                 </div>
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a class="btn btn-warning btn-block" href="#reserveform">Reserve a Table</a>
                 </div>
             </div>
         </div>
@@ -73,13 +77,22 @@
         </div>
 
 
+        <!-- Task 2 -->
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet
+                        <span class="badge badge-danger">NEW</span></h2>
+                        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                        
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center"
+                            src="img/buffet.png" alt="Buffet">
+                </div>
             </div>
         </div>
 
@@ -103,7 +116,67 @@
                 </div>
             </div>
         </div>
-    </div>
+
+        <!-- Task 1 -->
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-8 col-xl-8">
+                <div class="card">
+                    <a name="reserveform"></a>
+                        <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                            <div class="card-body">
+                                <form>
+                                    <div class="form-group row">
+                                        <label for="numguest" class="col-md-2 col-form-label">Number of Guests</label>
+                                        <div class="col-md-10">
+                                            <div class="form-check form-check-inline">
+                                                <input type="radio" class="form-check-input" name="1" id="1" value="1">
+                                                <label class="form-check-label" for="1">1</label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                                <input type="radio" class="form-check-input" name="2" id="2" value="2">
+                                                <label class="form-check-label" for="2">2</label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                                <input type="radio" class="form-check-input" name="3" id="3" value="3">
+                                                <label class="form-check-label" for="3">3</label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                                <input type="radio" class="form-check-input" name="4" id="4" value="4">
+                                                <label class="form-check-label" for="4">4</label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                                <input type="radio" class="form-check-input" name="5" id="5" value="5">
+                                                <label class="form-check-label" for="5">5</label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                                <input type="radio" class="form-check-input" name="6" id="6" value="6">
+                                                <label class="form-check-label" for="6">6</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="form-group row">
+                                        <label for="datetime" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                                        <div class="col-5 col-md-3">
+                                            <input type="datetime" class="form-control" id="datetime" name="datetime" placeholder="Date">
+                                        </div>
+                                        <div class="col-5 col-md-3">
+                                            <input type="datetime" class="form-control" id="datetime" name="datetime" placeholder="Time">
+                                        </div>
+                                    </div>
+
+                                    <!-- Submit -->
+                                    <div class="form-group row">
+                                        <div class="offset-md-2 col-md-10">
+                                            <button type="submit" class="btn btn-primary">Reserve</button>
+                                        </div>
+                                    </div>
+                                </form>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
     <footer>
         <div class="container">
